--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/cmlarson/demeritron-api/issues"
   },
-  "homepage": "https://github.com/cmlarson/demeritron-api#readme"
+  "homepage": "https://github.com/cmlarson/demeritron-api#readme",
+  "dependencies": {
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3"
+  }
 }
